# AstarLearning

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/: grid.txt
assets/models/: gnome.fbx  wall.fbx
assets/shaders/: billboard.frag  billboard.vert  grid.frag  grid.vert  menuAndEnd.frag  menuAndEnd.vert
ext/: CMakeLists.txt
src/: CMakeLists.txt  camera.h  cubeVerts.h  grid.cpp  grid.h  shader.cpp  shader.h  texture.h  window.cpp  window.h
